--- a/Zadanie2/src/main/resources/application.properties
+++ b/Zadanie2/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Zadanie2
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.url=jdbc:h2:mem:taskmngmntdb
+spring.sql.init.platform=h2
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
